force-app/main/default/objects/ActiveCamp__Error_Log__c/fields/ActiveCamp__Dashboard_Log__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Dashboard_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dashboard Log</label>
    <referenceTo>ActiveCamp__Dashboard_Log__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>