force-app/main/default/objects/ActiveCamp__Error_Log__c/fields/ActiveCamp__Dump__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Dump__c</fullName>
    <label>Dump</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>