force-app/main/default/objects/ActiveCamp__Error_Log__c/fields/ActiveCamp__Error_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Error_Record_Id__c</fullName>
    <label>Error Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>