force-app/main/default/objects/ActiveCamp__Error_Log__c/fields/ActiveCamp__Message__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>