force-app/main/default/objects/ActiveCamp__Error_Log__c/fields/ActiveCamp__Type__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>